[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.95"
appload-client = { path = "../../../backend-clients/rust-backend" }
async-trait = "0.1.83"
chrono = "0.4.39"
futures-util = "0.3.31"
image = "0.25.5"
quick-js = "0.4.1"
regex = "1.11.1"
# reqwest = "0.12.12"
reqwest = { version = "0.12.12", default-features = false, features = ["json", "stream", "rustls-tls", "cookies"] }
scraper = "0.22.0"
serde =  { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.137"
tokio = { version = "1.42.0", features = ["macros", "rt", "rt-multi-thread"] }
tokio-stream = "0.1.17"

