[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.95"
appload-client = { path = "../../../backend-clients/rust-backend" }
async-compat = "0.2.4"
async-trait = "0.1.88"
chrono = "0.4.41"
futures = "0.3.31"
image = "0.25.5"
quick-js = "0.4.1"
regex = "1.11.1"
reqwest = { version = "0.12.12", default-features = false, features = ["json", "rustls-tls", "cookies", "trust-dns"] }
scraper = "0.22.0"
serde =  { version = "1.0.217", features = ["derive", "rc"] }
serde_json = "1.0.137"
smol = "2.0.2"
smol-macros = "0.1.1"
typetag = "0.2.20"

